   works in standard Silverlight textboxes. However, applets written with
   managed code are not supported.
 - Added a German localization by Erwin D. Glockner.
 - When "dd" (or "d9" for VNI) is entered immediately after a number, the "dd"
   now turns into the dong sign.
 - Improved word boundary detection. Even with the Enforce Spelling option
   enabled, Vietnamese words can be typed immediately after any punctuation, as
   well as next to words in Chinese and other languages that do not use spaces.
 - Added a new finger-friendly preferences panel for Fennec 1.0.
 - Fixed an issue where opening the options pane would clear the ignored IDs
   list.
 - Fixed an issue where a backslash was not treated as a word boundary.
 - Added support for placing a combining tilde over the letter G in "Ng", for
   abbreviating "Nguye^~n".
 - VIQR and VIQR* dead keys can now be escaped using a backslash when the Auto
   input method is active.
 - The script monitor can now disable avim.js when typing in Wikipedia's
   experimental "Babaco" editor.
 - Added support for alpha versions of Komodo IDE and Komodo Edit 6.0.
 - The Charamel and Silvermel themes now use a creamier version of AVIM's logo
   in the Add-ons window and AVIM's options pane.
 - AVIM's logo is now displayed in the Add-ons window even when the extension is
   disabled.
 - The Script Monitor can now disable VietUni 1.7 in webpage.

Version ${Version} (${Date})
 - Restored support for Firefox 2 after nearly two years. Thunderbird 2 is now
   supported as well. (Welcome back, Windows 98 users!)
 - Added a button to Fennec's right toolbar for enabling and disabling AVIM.
 - Fixed the input method menu in the options panel in Fennec.
 - Added an option to recognize password boxes to the options panel in Fennec.
 - Fixed a regression in SeaMonkey where icons would not appear for the toolbar
   buttons except in the Customize Toolbar dialog.
 - Updated Hieu's URL in the LICENSE file.