@@ -1,3 +1,5 @@
+avim-preferences.helpurl=http://www.1ec5.org/software/avim/#options
+
 # Test Suite ###################################################################
 
 # $if{Debug}
