@@ -1,3 +1,7 @@
+# URL of the webpage that contains help documentation on AVIM's preferences.
+# Localizers should not change this string.
+avim-preferences.helpurl=http://www.1ec5.org/software/avim/#options
+
 # Test Suite ###################################################################
 
 # $if{Debug}
