@@ -1,3 +1,5 @@
+avim-preferences.helpurl=http://www.1ec5.org/software/avim/index.es.html#options
+
 # $if{Debug}
 tester-button.label=Abrir el paquete de pruebas…
 tester-button.accesskey=i
