@@ -1,3 +1,5 @@
+avim-preferences.helpurl=http://www.1ec5.org/software/avim/#options
+
 # $if{Debug}
 tester-button.label=Ouvrir la Suite de Test…
 tester-button.accesskey=S
