@@ -1,3 +1,5 @@
+avim-preferences.helpurl=http://www.1ec5.org/software/avim/index.vi.html#options
+
 # $if{Debug}
 tester-button.label=Mở Trình đo thử…
 tester-button.accesskey=o
