@@ -1,3 +1,5 @@
+avim-preferences.helpurl=http://www.1ec5.org/software/avim/#options
+
 # $if{Debug}
 tester-button.label=打开测试套…
 tester-button.accesskey=O
